simple-bank-base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank
  template:
    metadata:
      labels:
        app: simple-bank
    spec:
      containers:
        - name: simple-bank
          imagePullPolicy: Always
          image: brizaldi/simple-bank
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
            - containerPort: 9090
      imagePullSecrets:
        - name: dockerconfigjson
