simple-bank-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank
spec:
  selector:
    app: simple-bank
  ports:
  - port: 8080
    targetPort: 8080
